06-eks-istio-argocd-starbucks/starbucks-chart/templates/deploy-order-affinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: prod
spec:
  replicas: 3
  selector: { matchLabels: { app: order } }
  template:
    metadata: { labels: { app: order } }
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels: { app: order }
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector: { matchLabels: { app: order } }
