06-eks-istio-argocd-starbucks/starbucks-chart/templates/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: istio-system
  labels: { app: starbucks }
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - api.starbucks.example.com         # <<<<< 당신의 도메인
